# Control.Serialization.Protobuf

./: CMakeLists.txt
docs/: Architecture.md
public/PiSubmarine/Control/Protobuf/: Deserializer.h  Serializer.h
src/: CMakeLists.txt
src/PiSubmarine/Control/Protobuf/: Deserializer.cpp  OperatorCommand.proto  Serializer.cpp
test/: CMakeLists.txt
test/PiSubmarine/Control/Protobuf/: DeserializerTest.cpp  SerializerTest.cpp
